test/testdata/number/not_indexable_error.lox
1[0]; // error: 'number' value is not indexable
